--- a/src/templates/parts/combat/parts/base-values.hbs
+++ b/src/templates/parts/combat/parts/base-values.hbs
@@ -12,6 +12,7 @@
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="attack"
       title=(localize "anima.ui.combat.baseValues.attack.title")
+      rollable=true
       inputName="data.combat.attack.value"
       inputValue=data.data.combat.attack.value
     }}
@@ -19,6 +20,7 @@
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="block"
       title=(localize "anima.ui.combat.baseValues.block.title")
+      rollable=true
       inputName="data.combat.block.value"
       inputValue=data.data.combat.block.value
     }}
@@ -26,6 +28,7 @@
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="dodge"
       title=(localize "anima.ui.combat.baseValues.dodge.title")
+      rollable=true
       inputName="data.combat.dodge.value"
       inputValue=data.data.combat.dodge.value
     }}
