--- a/src/templates/parts/domine/parts/ki-accumulation.hbs
+++ b/src/templates/parts/domine/parts/ki-accumulation.hbs
@@ -150,11 +150,11 @@
       "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
         class="current-generic-reserve accumulation-row-reserve"
         hideTitle=true
-        inputName="data.domine.kiAccumulation.generic.current.value"
-        inputValue=data.data.domine.kiAccumulation.generic.current.value
+        inputName="data.domine.kiAccumulation.generic.value"
+        inputValue=data.data.domine.kiAccumulation.generic.value
         hasSecondaryInput=true
-        secondaryInputName="data.domine.kiAccumulation.generic.total.value"
-        secondaryInputValue=data.data.domine.kiAccumulation.generic.total.value
+        secondaryInputName="data.domine.kiAccumulation.generic.max"
+        secondaryInputValue=data.data.domine.kiAccumulation.generic.max
       }}
     </div>
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
