--- a/src/templates/parts/header/parts/common-resources.hbs
+++ b/src/templates/parts/header/parts/common-resources.hbs
@@ -9,15 +9,15 @@
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="max-life"
         title=(localize 'anima.ui.general.life.max.title')
-        inputName="data.characteristics.secondaries.lifePoints.max.value"
-        inputValue=data.data.characteristics.secondaries.lifePoints.max.value
+        inputName="data.characteristics.secondaries.lifePoints.max"
+        inputValue=data.data.characteristics.secondaries.lifePoints.max
       }}
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="current-life"
         title=(localize 'anima.ui.general.life.current.title')
-        inputName="data.characteristics.secondaries.lifePoints.current.value"
-        inputValue=data.data.characteristics.secondaries.lifePoints.current.value
+        inputName="data.characteristics.secondaries.lifePoints.value"
+        inputValue=data.data.characteristics.secondaries.lifePoints.value
       }}
     </div>
     <div class='initiative'>
@@ -54,11 +54,11 @@
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="fatigue"
         title=(localize 'anima.ui.general.fatigue.title')
-        inputName="data.characteristics.secondaries.fatigue.current.value"
-        inputValue=data.data.characteristics.secondaries.fatigue.current.value
+        inputName="data.characteristics.secondaries.fatigue.value"
+        inputValue=data.data.characteristics.secondaries.fatigue.value
         hasSecondaryInput=true
-        secondaryInputName="data.characteristics.secondaries.fatigue.max.value"
-        secondaryInputValue=data.data.characteristics.secondaries.fatigue.max.value
+        secondaryInputName="data.characteristics.secondaries.fatigue.max"
+        secondaryInputValue=data.data.characteristics.secondaries.fatigue.max
       }}
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
