--- a/src/templates/parts/mystic/parts/zeon-regeneration.hbs
+++ b/src/templates/parts/mystic/parts/zeon-regeneration.hbs
@@ -12,11 +12,11 @@
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="final"
       title=(localize "anima.ui.mystic.zeonRegeneration.final.title")
-      inputName="data.mystic.zeonRegeneration.current.value"
-      inputValue=data.data.mystic.zeonRegeneration.current.value
+      inputName="data.mystic.zeonRegeneration.base.value"
+      inputValue=data.data.mystic.zeonRegeneration.base.value
       hasSecondaryInput=true
-      secondaryInputName="data.mystic.zeonRegeneration.max.value"
-      secondaryInputValue=data.data.mystic.zeonRegeneration.max.value
+      secondaryInputName="data.mystic.zeonRegeneration.final.value"
+      secondaryInputValue=data.data.mystic.zeonRegeneration.final.value
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
