--- a/src/templates/parts/psychic/parts/psychic-potential.hbs
+++ b/src/templates/parts/psychic/parts/psychic-potential.hbs
@@ -12,6 +12,7 @@
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="potential"
       title=(localize "anima.ui.psychic.psychicPotential.potential.title")
+      rollable=true
       inputName="data.psychic.psychicPotential.value"
       inputValue=data.data.psychic.psychicPotential.value
     }}
