--- a/src/templates/parts/mystic/parts/zeon.hbs
+++ b/src/templates/parts/mystic/parts/zeon.hbs
@@ -12,11 +12,18 @@
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="final"
       title=(localize "anima.ui.mystic.zeon.final.title")
-      inputName="data.mystic.zeon.current.value"
-      inputValue=data.data.mystic.zeon.current.value
+      inputName="data.mystic.zeon.value"
+      inputValue=data.data.mystic.zeon.value
       hasSecondaryInput=true
-      secondaryInputName="data.mystic.zeon.max.value"
-      secondaryInputValue=data.data.mystic.zeon.max.value
+      secondaryInputName="data.mystic.zeon.max"
+      secondaryInputValue=data.data.mystic.zeon.max
+    }}
+    {{>
+    "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
+      class="accumulated"
+      title=(localize "anima.ui.mystic.zeon.accumulated.title")
+      inputName="data.mystic.zeon.accumulated.value"
+      inputValue=data.data.mystic.zeon.accumulated.value
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
