--- a/src/templates/parts/psychic/parts/psychic-points.hbs
+++ b/src/templates/parts/psychic/parts/psychic-points.hbs
@@ -12,11 +12,11 @@
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="power"
       title=(localize "anima.ui.psychic.psychicPoints.power.title")
-      inputName="data.psychic.psychicPoints.used.value"
-      inputValue=data.data.psychic.psychicPoints.used.value
+      inputName="data.psychic.psychicPoints.value"
+      inputValue=data.data.psychic.psychicPoints.value
       hasSecondaryInput=true
-      secondaryInputName="data.psychic.psychicPoints.max.value"
-      secondaryInputValue=data.data.psychic.psychicPoints.max.value
+      secondaryInputName="data.psychic.psychicPoints.max"
+      secondaryInputValue=data.data.psychic.psychicPoints.max
     }}
   {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
