changes: make secondary tab responsive

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -130,7 +130,7 @@
       align-items: center;
       justify-content: center;
       width: 100%;
-      max-height: 1.7rem;
+      min-height: 1.7rem;
       padding-right: 0.5rem;
 
       .group-header-title {
