--- a/src/scss/actor-sheet.scss
+++ b/src/scss/actor-sheet.scss
@@ -5,8 +5,11 @@
   flex-direction: column;
 
   .sheet-tabs {
-    border-top: 1px solid $red;
-    border-bottom: 1px solid $red;
+    margin-top: 0.75rem !important;
+    margin-bottom: 0.75rem !important;
+
+    border-top: 1px solid $red !important;
+    border-bottom: 1px solid $red !important;
 
     .item {
       background: transparent;
