--- a/src/templates/parts/common/horizontal-titled-input.hbs
+++ b/src/templates/parts/common/horizontal-titled-input.hbs
@@ -7,7 +7,7 @@
             {{/if}}
             '
             {{#if this.rollable}}
-              data-roll="{{#if this.rollableDice}}{{this.rollableDice}}{{else}}1d100xa{{/if}}+@{{getKeyOf this.inputName}}"
+              data-roll="{{#if this.rollableDice}}{{this.rollableDice}}{{else}}1d100xa{{/if}}+{{this.inputValue}}"
               data-label="
               {{#if this.rollableMessage}}
                 {{this.rollableMessage}}
