refactor: simplify dynamic items creation

--- a/src/scss/domine.scss
+++ b/src/scss/domine.scss
@@ -61,6 +61,18 @@
   }
   // Nemesis Skill
 
+  // Ars Magnus
+  .ars-magnus {
+    .ars-magnus-row:first-child {
+      margin-top: 0;
+    }
+
+    .ars-magnus-row {
+      margin-top: 0.75rem;
+    }
+  }
+  // Ars Magnus
+
   // Martial Arts
   .martial-arts {
     .martial-art-row:first-child {
