--- a/src/templates/parts/domine/parts/martial-arts.hbs
+++ b/src/templates/parts/domine/parts/martial-arts.hbs
@@ -26,7 +26,7 @@
           title=(localize "anima.ui.domine.martialArts.grade.title")
           hideTitle=(is "gt" @index 0)
           inputType="text"
-          inputName=(concat "data.dynamic.martialArts." this._id ".grade")
+          inputName=(concat "data.dynamic.martialArts." this._id ".data.grade.value")
           inputValue=this.data.grade.value
         }}
       </div>
