--- a/src/templates/parts/combat/combat.hbs
+++ b/src/templates/parts/combat/combat.hbs
@@ -6,4 +6,5 @@
          {{> "systems/animabf/templates/parts/combat/parts/ammo.hbs"}}
     </div>
     {{> "systems/animabf/templates/parts/combat/parts/weapons.hbs"}}
+    {{> "systems/animabf/templates/parts/combat/parts/armors.hbs"}}
 </div>
