make resistances rollable with 1d100

--- a/src/templates/actor/parts/header/parts/resistances.hbs
+++ b/src/templates/actor/parts/header/parts/resistances.hbs
@@ -14,6 +14,7 @@
         class="resistance"
         title=(localize (concat 'anima.ui.resistances.' key))
         rollable=true
+        rollableDice='1d100'
         rollableMessage=(localize (concat 'anima.ui.resistances.' key))
         inputName=(concat "data.characteristics.secondaries.resistances." key ".value")
         inputValue=atr.value
