--- a/src/templates/common/ui/vertical-titled-input.hbs
+++ b/src/templates/common/ui/vertical-titled-input.hbs
@@ -2,6 +2,7 @@
 "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
   class=(concat this.class " " "vertical")
   hideTitle=this.hideTitle
+  disabled=this.disabled
   title=this.title
   rollable=this.rollable
   rollableDice=this.rollableDice
