--- a/src/scss/actor/parts/header.scss
+++ b/src/scss/actor/parts/header.scss
@@ -19,6 +19,8 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-column-gap: 0.5rem;
+
+      margin-bottom: 0.2rem;
     }
   }
 
@@ -130,49 +132,29 @@
     .group-body {
       margin-top: 0;
       padding: 0.5rem;
-      .life {
+
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      .movements {
+        margin-top: 0.5rem;
+
         display: grid;
-        grid-template-columns: 1fr 3fr;
-        grid-column-gap: -1rem;
-
-        .max-life {
-          margin-right: -1rem;
-
-          .input {
-            background-color: $red;
-            color: white;
-
-            z-index: 1;
-          }
-        }
-
-        .current-life {
-          .input-container {
-            width: 100%;
-          }
-        }
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 0.5rem;
       }
 
       .initiative {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        margin-top: 0.5rem;
 
-        .initiative-title {
-          margin-top: 0.75rem;
-          font-size: 1rem;
-          font-weight: bold;
-          text-align: center;
-        }
-
-        .initiative-values {
-          display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
-          grid-column-gap: 0.5rem;
-        }
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-column-gap: 0.5rem;
       }
 
-      .fatigue-movement {
+      .first-row {
         display: flex;
         justify-content: space-between;
 
