feat: final armor calculations are automatical

--- a/src/templates/actor/parts/header/parts/primary-characteristics.hbs
+++ b/src/templates/actor/parts/header/parts/primary-characteristics.hbs
@@ -15,6 +15,7 @@
         inputName=(concat "data.characteristics.primaries." key ".value")
         inputValue=char.value
         hasSecondaryInput=true
+        disableSecondaryInput=true
         secondaryInputValue=char.mod
       }}
     {{/each}}
