--- a/src/templates/common/ui/vertical-titled-input.hbs
+++ b/src/templates/common/ui/vertical-titled-input.hbs
@@ -10,6 +10,7 @@
   inputName=this.inputName
   inputValue=this.inputValue
   hasSecondaryInput=this.hasSecondaryInput
+  disableSecondaryInput=this.disableSecondaryInput
   secondaryInputName=this.secondaryInputName
   secondaryInputValue=this.secondaryInputValue
 }}
