--- a/src/templates/actor/parts/header/parts/total-armor.hbs
+++ b/src/templates/actor/parts/header/parts/total-armor.hbs
@@ -8,63 +8,62 @@
   {{#> "systems/animabf/templates/common/ui/group-body.hbs"
     class="armor"
   }}
-    {{>
-    "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-      class="name"
-      title=(localize "anima.ui.armor.name.title")
-      inputType="text"
-      inputName=(concat "data.combat.armor.name.value")
-      inputValue=data.data.combat.armor.name.value
-    }}
     <div class='at'>
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="cut"
+        disabled=true
         title=(localize "anima.ui.armor.at.cut.title")
         inputName=(concat "data.combat.armor.at.cut.value")
-        inputValue=data.data.combat.armor.at.cut.value
+        inputValue=data.data.combat.totalArmor.at.cut.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="impact"
+        disabled=true
         title=(localize "anima.ui.armor.at.impact.title")
         inputName=(concat "data.combat.armor.at.impact.value")
-        inputValue=data.data.combat.armor.at.impact.value
+        inputValue=data.data.combat.totalArmor.at.impact.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="thrust"
+        disabled=true
         title=(localize "anima.ui.armor.at.thrust.title")
         inputName=(concat "data.combat.armor.at.thrust.value")
-        inputValue=data.data.combat.armor.at.thrust.value
+        inputValue=data.data.combat.totalArmor.at.thrust.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="heat"
+        disabled=true
         title=(localize "anima.ui.armor.at.heat.title")
         inputName=(concat "data.combat.armor.at.heat.value")
-        inputValue=data.data.combat.armor.at.heat.value
+        inputValue=data.data.combat.totalArmor.at.heat.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="electric"
+        disabled=true
         title=(localize "anima.ui.armor.at.electricity.title")
         inputName=(concat "data.combat.armor.at.electricity.value")
-        inputValue=data.data.combat.armor.at.electricity.value
+        inputValue=data.data.combat.totalArmor.at.electricity.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="cold"
+        disabled=true
         title=(localize "anima.ui.armor.at.cold.title")
         inputName=(concat "data.combat.armor.at.cold.value")
-        inputValue=data.data.combat.armor.at.cold.value
+        inputValue=data.data.combat.totalArmor.at.cold.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="energy"
+        disabled=true
         title=(localize "anima.ui.armor.at.energy.title")
         inputName=(concat "data.combat.armor.at.energy.value")
-        inputValue=data.data.combat.armor.at.energy.value
+        inputValue=data.data.combat.totalArmor.at.energy.value
       }}
     </div>
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
