--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,58 +1,5 @@
 @import 'variable';
-
-// -----------------------
-// ------CLASS GRID-------
-// -----------------------
-.grid-1col {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: 1fr;
-}
-.grid-2col {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 1fr;
-}
-
-.grid-3col {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 1fr;
-}
-
-.grid-4col {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 1fr;
-}
-
-// ----------------------------
-// -------ROLLABLE CLASS-------
-// ----------------------------
-
-.rollable {
-  cursor: pointer;
-  &:hover,
-  &:focus {
-    text-shadow: 0 0 8px red;
-  }
-}
-
-// ---------------------------
-// ------OVERRITE CONTEXTUAL MENU-------
-// ---------------------------
-
-#context-menu {
-  &.expand-up, &.expand-down {
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
-  }
-}
-
-// ---------------------------
-// ------BACKGORUDCOLOR-------
-// ---------------------------
+@import 'mixin';
 
 .window-app .window-content {
   background: $light-cream;
@@ -60,11 +7,14 @@
 }
 
 .abf.sheet.actor {
-  // ------------------------
-  // ------ALL INPUTS-------
-  // ------------------------
+  .rollable {
+    cursor: pointer;
+    &:hover,
+    &:focus {
+      text-shadow: 0 0 8px red;
+    }
+  }
 
-  // TODO: Remove this generic selector and set the class selector over all inputs
   .input {
     font-family: inherit;
     border: none;
@@ -77,34 +27,14 @@
     }
   }
 
-  // ------------------------
-  // ------ALL TEXTS--------
-  // ------------------------
-
-  .text-off {
-    color: $grey;
+  #context-menu {
+    &.expand-up,
+    &.expand-down {
+      transform: translate(-50%, -50%);
+      left: 50%;
+      top: 50%;
+    }
   }
-}
-
-@mixin group-header {
-  text-align: center;
-  padding: 3px;
-  color: $white;
-  border-radius: $border-radius;
-  background: $red;
-  font-weight: 600;
-}
-
-@mixin group-body {
-  background: $dark-cream;
-  border-radius: $border-radius;
-}
-
-@mixin input {
-  border-radius: $border-radius;
-  background: $light-cream;
-  font-weight: bold;
-  padding: 0.25rem 0.5rem;
 }
 
 .common- {
